# eos_notify_plugin

./: CMakeLists.txt  README.md  notify_plugin.cpp
include/eosio/notify_plugin/: notify_plugin.hpp
